tests/ui/integer.rs
use range_set_blaze::RangeSetBlaze;

fn _some_fn() {
    let _integer_set = RangeSetBlaze::from_iter([1, 2, 3, 5]);
    let _char_set = RangeSetBlaze::from_iter(['a', 'b', 'c', 'd']);
}

fn main() {}
